Refactored code to improve readability, enforce best practices, remove unused elements, and add suppressions for static code analysis.